--- a/netlify.toml
+++ b/netlify.toml
@@ -2,16 +2,7 @@
   functions = "netlify/functions"
   
 [[headers]]
-  for = "/data/*.json"
+  for = "/data/intervenciones.json"
   [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Headers = "Content-Type"
-    Access-Control-Allow-Methods = "GET, OPTIONS"
     Cache-Control = "max-age=3600"
-
-[[headers]]
-  for = "/*.json"
-  [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Headers = "Content-Type"
-    Access-Control-Allow-Methods = "GET, OPTIONS"
+    
