--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
 
 [build.environment]
   NODE_VERSION = "20"
+  NPM_CONFIG_PRODUCTION = "false"
   
 [[headers]]
   for = "/data/intervenciones.json"
