Fix: Use direct node invocation to bypass permission errors - Change build to 'node ./node_modules/vite/bin/vite.js build' - Update NPM_FLAGS to use modern '--include=dev' syntax - This completely bypasses executable permission requirements - Addresses Netlify's persistent 'sh: 1: vite: Permission denied' error

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 
 [build.environment]
   NODE_VERSION = "20"
-  NPM_CONFIG_PRODUCTION = "false"
+  NPM_FLAGS = "--include=dev"
   
 [[headers]]
   for = "/data/intervenciones.json"
