--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "node ./node_modules/vite/bin/vite.js build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "repository": {
@@ -20,7 +20,7 @@
     "url": "https://github.com/JaVDaNu96/KEF-Website/issues"
   },
   "homepage": "https://github.com/JaVDaNu96/KEF-Website#readme",
-  "devDependencies": {
+  "dependencies": {
     "vite": "^7.2.6",
     "vite-plugin-html-inject": "^1.1.2"
   }
